--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -10,7 +10,12 @@ p {
 #linetwo {
   color: blue;
   font-size: 36px;
-  font-weight: bold;
 }
 
+#linefour {
+  color: light green;
+  font-size: 24px;
+  font-weight: bold;
+}
+  
   
